--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,10 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
-## azure-pipelines.yml
+azure-pipelines.yml
 stages:
 
-- stage: one
+  - stage: one
   jobs:
   - job: A
     steps:
